unpackaged/main/default/objects/ServiceResource/fields/Background_Check__c.field-meta.xml
<CustomField>
    <fullName>Background_Check__c</fullName>
    <label>Background Check</label>
    <type>Date</type>
</CustomField>