unpackaged/main/default/objects/ServiceResource/fields/Currently_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Currently_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated every time the Last Known Location Util Runs - Reflects in the resource is currently on the schedule</description>
    <label>On Schedule</label>
    <type>Checkbox</type>
</CustomField>