unpackaged/main/default/objects/ServiceResource/fields/Driver_can_go_Online_Offline__c.field-meta.xml
<CustomField>
    <fullName>Driver_can_go_Online_Offline__c</fullName>
    <formula>Primary_Service_Territory__r.Driver_can_go_Online_Offline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver can go Online/Offline</label>
    <type>Checkbox</type>
</CustomField>