unpackaged/main/default/objects/ServiceResource/fields/Driver_Type__c.field-meta.xml
<CustomField>
    <fullName>Driver_Type__c</fullName>
    <label>Driver Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dispatcher</fullName>
            </value>
            <value>
                <fullName>Dispatcher Seasonal</fullName>
                <isActive>false</isActive>
                <label>Dispatcher Seasonal</label>
            </value>
            <value>
                <fullName>Driver</fullName>
                <default>true</default>
                <label>Driver</label>
            </value>
            <value>
                <fullName>Driver BA</fullName>
                <isActive>false</isActive>
                <label>Driver BA</label>
            </value>
            <value>
                <fullName>Driver Seasonal</fullName>
            </value>
            <value>
                <fullName>Lead Driver</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Owner BA</fullName>
                <isActive>false</isActive>
                <label>Owner BA</label>
            </value>
            <value>
                <fullName>Owner BA Seasonal</fullName>
                <isActive>false</isActive>
                <label>Owner BA Seasonal</label>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>