unpackaged/main/default/objects/ServiceResource/fields/Eligible_For_Emergencey_Call__c.field-meta.xml
<CustomField>
    <fullName>Eligible_For_Emergencey_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible For Emergencey Call</label>
    <type>Checkbox</type>
</CustomField>