unpackaged/main/default/objects/ServiceResource/fields/Facility_Number__c.field-meta.xml
<CustomField>
    <fullName>Facility_Number__c</fullName>
    <formula>Primary_Service_Territory__r.Facility_Number__c</formula>
    <label>Facility Number</label>
    <type>Text</type>
</CustomField>