unpackaged/main/default/objects/ServiceResource/fields/Idle__c.field-meta.xml
<CustomField>
    <fullName>Idle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Idle</label>
    <type>Checkbox</type>
</CustomField>