unpackaged/main/default/objects/ServiceResource/fields/Last_Used_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Last_Used_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Used Vehicle</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Service Resources (Last Used Vehicle)</relationshipLabel>
    <relationshipName>Service_Resources1</relationshipName>
    <type>Lookup</type>
</CustomField>