unpackaged/main/default/objects/ServiceResource/fields/LocationId__c.field-meta.xml
<CustomField>
    <fullName>LocationId__c</fullName>
    <formula>Vehicle__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LocationId</label>
    <type>Text</type>
</CustomField>