unpackaged/main/default/objects/ServiceResource/fields/Primary_Facility_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Facility_Id__c</fullName>
    <label>Primary Facility Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>