unpackaged/main/default/objects/ServiceResource/fields/Primary_Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Primary_Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field auto-populates the Service Territory selected as the Primary Territory</description>
    <label>Primary Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Service Resources</relationshipLabel>
    <relationshipName>Service_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>