unpackaged/main/default/objects/ServiceResource/fields/PrimaryFacilityId__c.field-meta.xml
<CustomField>
    <fullName>PrimaryFacilityId__c</fullName>
    <label>PrimaryFacilityId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>