unpackaged/main/default/objects/ServiceResource/fields/SR_Power_Of_One__c.field-meta.xml
<CustomField>
    <fullName>SR_Power_Of_One__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Counter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>