unpackaged/main/default/objects/ServiceResource/fields/Tracker_Contact_old__c.field-meta.xml
<CustomField>
    <fullName>Tracker_Contact_old__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tracker Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Resources</relationshipLabel>
    <relationshipName>Service_Resources_old</relationshipName>
    <type>Lookup</type>
</CustomField>