unpackaged/main/default/objects/ServiceResource/fields/Tracker_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Tracker_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tracker Enabled</label>
    <type>Checkbox</type>
</CustomField>