unpackaged/main/default/objects/ServiceResource/listViews/All_Active_Resources.listView-meta.xml
<ListView>
    <fullName>All_Active_Resources</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>FSL__Priority__c</columns>
    <columns>Driver_Id__c</columns>
    <columns>External_Id__c</columns>
    <columns>Primary_Facility_Id__c</columns>
    <columns>Primary_Service_Territory__c</columns>
    <columns>Id</columns>
    <columns>Vehicle__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RelatedRecord</field>
        <operation>contains</operation>
        <value>Alexis</value>
    </filters>
    <label>All Active Resources</label>
</ListView>