unpackaged/main/default/objects/ServiceResource/listViews/All_Agents.listView-meta.xml
<ListView>
    <fullName>All_Agents</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <columns>Owner</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ResourceType</field>
        <operation>equals</operation>
        <value>D,A</value>
    </filters>
    <label>All Agents</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>