unpackaged/main/default/objects/ServiceResource/listViews/Inclement_Weather.listView-meta.xml
<ListView>
    <fullName>Inclement_Weather</fullName>
    <columns>Primary_Service_Territory__c</columns>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>IsActive</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Name</field>
        <operation>contains</operation>
        <value>inclement</value>
    </filters>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Inclement Weather</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>