unpackaged/main/default/objects/ServiceResource/listViews/My_ServiceResources.listView-meta.xml
<ListView>
    <fullName>My_ServiceResources</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <label>My Service Resources</label>
</ListView>