unpackaged/main/default/objects/ServiceResource/listViews/Tracker_Users.listView-meta.xml
<ListView>
    <fullName>Tracker_Users</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <columns>Primary_Service_Territory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tracker_Enabled__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Primary_Service_Territory__c</field>
        <operation>notContain</operation>
        <value>169999</value>
    </filters>
    <label>Tracker Users</label>
    <sharedTo>
        <group>All_Administrators</group>
    </sharedTo>
</ListView>